--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                 <span></span>
                 <span></span>
                 <span></span>
+                <span></span>
             </div>
 
             <div class="menu-links">
