Created Profile Section

--- a/index.html
+++ b/index.html
@@ -54,6 +54,32 @@
 
     </nav>
 
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="./assets/profile-pic.png" alt="Aaryan Biradar Profile Picture">
+        </div>
+
+        <div class="section__text">
+            <div class="home-page-text"> 
+                <p class="section__text__p1">Hello World, I'm</p>
+                <h1 class="title">Aaryan Biradar</h1>
+                <p class="section__text__p2">IN NEED OF A JOB PLEASEEEEE!!!!!!!!!!</p> <!--Change to dynamic -->
+             </div>
+                     
+
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/Aaryan Biradar Resume November.pdf')">Open CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+            </div>
+            
+            <div id="social-container">
+                <img src="./assets/linkedin.png" alt="My LinkedIn" class="icon" onclick="location.href='https://www.linkedin.com/in/aaryan-biradar/'">
+                <img src="./assets/github.png" alt="My Github" class="icon" onclick="location.href='https://github.com/Aaryan-Biradar'">
+
+            </div>
+
+        </div>
+    </section>
 
 
 </body>
