Added Profile Section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 
     <nav id="destop-nav">
         <div
@@ -63,7 +63,7 @@
             <div class="home-page-text"> 
                 <p class="section__text__p1">Hello World, I'm</p>
                 <h1 class="title">Aaryan Biradar</h1>
-                <p class="section__text__p2">IN NEED OF A JOB PLEASEEEEE!!!!!!!!!!</p> <!--Change to dynamic -->
+                <h2 class="section__text__p2">I'm <span></span></h2> 
              </div>
                      
 
