--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                      
 
             <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/Aaryan Biradar Resume November.pdf')">Open CV</button>
+                <button class="btn btn-color-2" onclick="window.open('./assets/Aaryan_Biradar_Resume.pdf')">Open CV</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
             
