--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             onclick="location.href='https://www.linkedin.com/in/aaryan-biradar/'">
                         <img src="./assets/github.png" alt="My Github" class="icon"
                             onclick="location.href='https://github.com/Aaryan-Biradar'">
-                        <img src="./assets/email.png" alt="My Email" class="icon"
+                        <img src="./assets/email.png" alt="My Email" class="icon email-icon"
                             onclick="location.href='mailto:aaryan.biradar@example.com'">
                     </div>
                 </div>
@@ -46,12 +46,6 @@
                 <div class="hero-pic">
                     <img src="./assets/profile-pic.png" alt="Aaryan Biradar Profile Picture">
                 </div>
-            </div>
-
-            <div class="btn-container">
-                <button class="btn btn-color-2" onclick="window.open('./assets/Aaryan_Biradar_Resume.pdf')">Open
-                    CV</button>
-                <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Me</button>
             </div>
         </section>
 
