--- a/index.html
+++ b/index.html
@@ -50,19 +50,69 @@
         </section>
 
         <section id="experience" class="doc-section">
-            <h2 class="section-title">Experience</h2>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <div class="timeline-dot"></div>
-                    <div class="timeline-content">
-                        <h3>Software Engineering Intern</h3>
-                        <p class="timeline-subtitle">Company Name | May 2025 - Aug 2025</p>
-                        <ul class="timeline-details">
-                            <li>Developed and maintained core features of the company's main web application.</li>
-                            <li>Collaborated with a team of developers using Agile methodologies.</li>
-                        </ul>
+            <h2 class="section-title">Journey</h2>
+            <p class="section-subtitle">What I've learned and where I've been.</p>
+
+            <div class="exp-list">
+                <!-- Example Card 1 -->
+                <div class="exp-card">
+                    <div class="exp-bg"
+                        style="background-image: url('./assets/Expirences/CienaBanner.png'); background-position: right 20%; background-size: 55%;">
+                    </div>
+                    <!-- Ciena Banner -->
+
+                    <div class="exp-content">
+                        <div class="exp-header">
+                            <div class="exp-logo">
+                                <!-- Ciena Logo -->
+                                <img src="./assets/Expirences/ciena.png" alt="Ciena Logo" class="company-logo">
+                            </div>
+                            <div class="exp-titles">
+                                <h3>Ciena</h3>
+                                <p>Software Engineer Intern</p>
+                            </div>
+                        </div>
+
+                        <div class="exp-details">
+                            <div class="tech-stack">
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">TypeScript</span>
+                                <span class="tech-tag">Node.js</span>
+                                <span class="tech-tag">MongoDB</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
+                <!-- Example Card 2 -->
+                <div class="exp-card">
+                    <div class="exp-bg"
+                        style="background-image: url('./assets/Expirences/DCRbanner.png'); background-position: right 40%; background-size: 60%;">
+                    </div>
+
+                    <div class="exp-content">
+                        <div class="exp-header">
+                            <div class="exp-logo">
+                                <!-- Dovercourt Logo -->
+                                <img src="./assets/Expirences/DCRlogo.png" alt="Dovercourt Logo" class="company-logo">
+                            </div>
+                            <div class="exp-titles">
+                                <h3>Founder & Lead Instructor</h3>
+                                <p>Dovercourt Recreation Center</p>
+                            </div>
+                        </div>
+
+                        <div class="exp-details">
+                            <div class="tech-stack">
+                                <span class="tech-tag">Python</span>
+                                <span class="tech-tag">PyTorch</span>
+                                <span class="tech-tag">AWS</span>
+                                <span class="tech-tag">Docker</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
 
