Added experiences and project cards with youtube embeds

--- a/index.html
+++ b/index.html
@@ -119,16 +119,52 @@
         <section id="projects" class="doc-section">
             <h2 class="section-title">Projects</h2>
             <div class="projects-grid">
-                <div class="project-card">
-                    <h3>Project Name 1</h3>
-                    <p>A brief description of this project showcasing skills in React, Node.js, and MongoDB.</p>
-                    <a href="#" class="project-link">View Project &rarr;</a>
-                </div>
-                <div class="project-card">
-                    <h3>Project Name 2</h3>
-                    <p>Another awesome project built with modern web technologies, focusing on clean UI/UX.</p>
-                    <a href="#" class="project-link">View Project &rarr;</a>
-                </div>
+                <!-- Amplify Project -->
+                <a href="https://github.com/clam433/githappens" target="_blank" rel="noopener noreferrer"
+                    class="project-card">
+                    <div class="project-media">
+                        <iframe
+                            src="https://www.youtube.com/embed/m5lNXP6PWW0?autoplay=1&mute=1&loop=1&playlist=m5lNXP6PWW0&controls=0&disablekb=1&fs=0&modestbranding=1&playsinline=1"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>Amplify</h3>
+                            <img src="./assets/github.png" alt="GitHub Repository" class="project-icon">
+                        </div>
+                        <p class="project-desc">A platform that integrates Git with real-time incident responses and
+                            analytics.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">Node.js</span>
+                            <span class="tech-tag">TypeScript</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- TutorLink Project -->
+                <a href="https://github.com/yasminmahdi06/TutorLink" target="_blank" rel="noopener noreferrer"
+                    class="project-card">
+                    <div class="project-media">
+                        <iframe
+                            src="https://www.youtube.com/embed/SeVZJWTplcs?autoplay=1&mute=1&loop=1&playlist=SeVZJWTplcs&controls=0&disablekb=1&fs=0&modestbranding=1&playsinline=1"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>TutorLink</h3>
+                            <img src="./assets/github.png" alt="GitHub Repository" class="project-icon">
+                        </div>
+                        <p class="project-desc">A peer‑to‑peer tutoring platform connecting university students with
+                            top-performing tutors from their own campus.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">Firebase</span>
+                            <span class="tech-tag">Tailwind</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </section>
 
