--- a/index.html
+++ b/index.html
@@ -13,16 +13,7 @@
     <script src="script.js" defer></script>
 
     <main class="document-container">
-        <!-- Document Header (Replaces Nav) -->
-        <header class="doc-header">
-            <h3 class="doc-logo"><a href="#main">Aaryan Biradar</a></h3>
-            <div class="doc-links">
-                <a href="#about">About</a> &middot;
-                <a href="#experience">Experience</a> &middot;
-                <a href="#projects">Projects</a> &middot;
-                <a href="#contact">Contact</a>
-            </div>
-        </header>
+        <!-- Header links removed for a cleaner minimal layout -->
 
         <section id="about" class="hero-section">
             <div class="hero-header">
