updated landing page

--- a/index.html
+++ b/index.html
@@ -17,28 +17,34 @@
 
         <section id="about" class="hero-section">
             <div class="hero-header">
-                <div class="hero-text">
+                <div class="hero-titles">
                     <p class="section__text__p1">Hello World, I'm</p>
                     <h1 class="title">Aaryan Biradar</h1>
-                    <h2 class="section__text__p2">I'm <span></span></h2>
-                    <p class="intro-text">Computer Science student at Carleton University passionate about building
-                        impactful software.</p>
-
-                    <div id="social-container">
-                        <img src="./assets/Icons/linkedin.png" alt="My LinkedIn profile" class="icon"
-                            onclick="window.open('https://www.linkedin.com/in/aaryan-biradar/', '_blank')" />
-                        <img src="./assets/Icons/github.png" alt="My GitHub profile" class="icon"
-                            onclick="window.open('https://github.com/Aaryan-Biradar', '_blank')" />
-                        <img src="./assets/Icons/email.png" alt="My Email" class="icon email-icon"
-                            onclick="location.href='mailto:aaryan.biradar@example.com'" />
-                        <img src="./assets/Icons/CVicon.png" alt="My Resume/CV" class="icon"
-                            onclick="window.open('./assets/Aaryan_Biradar_Resume.pdf', '_blank')" />
-                    </div>
+                    <h2 class="section__text__p2">a <span></span></h2>
                 </div>
 
                 <div class="hero-pic">
                     <img src="./assets/profile-pic.png" alt="Aaryan Biradar Profile Picture">
                 </div>
+            </div>
+
+            <p class="intro-text">
+                I'm a third-year Computer Science student at <a href="https://carleton.ca/" target="_blank"
+                    rel="noopener noreferrer" class="inline-link">Carleton University</a>.<br>
+                Currently I'm building out RAG-based architectures, organizing <a href="https://buildersundays.ca/"
+                    target="_blank" rel="noopener noreferrer" class="inline-link">Builder Sundays</a> Ottawa, and
+                scaling my latest project. I'm always looking for new challenges; let’s connect!
+            </p>
+
+            <div id="social-container">
+                <img src="./assets/Icons/linkedin.png" alt="My LinkedIn profile" class="icon"
+                    onclick="window.open('https://www.linkedin.com/in/aaryan-biradar/', '_blank')" />
+                <img src="./assets/Icons/github.png" alt="My GitHub profile" class="icon"
+                    onclick="window.open('https://github.com/Aaryan-Biradar', '_blank')" />
+                <img src="./assets/Icons/email.png" alt="My Email" class="icon email-icon"
+                    onclick="location.href='mailto:aaryan.biradar@example.com'" />
+                <img src="./assets/Icons/CVicon.png" alt="My Resume/CV" class="icon"
+                    onclick="window.open('./assets/Aaryan_Biradar_Resume.pdf', '_blank')" />
             </div>
         </section>
 
