--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                                 <img src="./assets/Expirences/ciena.png" alt="Ciena Logo" class="company-logo">
                             </div>
                             <div class="exp-titles">
-                                <h3>Ciena</h3>
-                                <p>Software Engineer Intern</p>
+                                <h3>Software Engineer Intern</h3>
+                                <p>Ciena</p>
                             </div>
                         </div>
 
@@ -82,35 +82,94 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <!-- Example Card 2 -->
-                <div class="exp-card">
-                    <div class="exp-bg"
-                        style="background-image: url('./assets/Expirences/DCRbanner.png'); background-position: right 40%; background-size: 60%;">
+            <!-- Shopify Experience Card -->
+            <div class="exp-card">
+                <!-- Placeholder background (can use solid color or another image if preferred) -->
+                <div class="exp-bg"
+                    style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
+                </div>
+
+                <div class="exp-content">
+                    <div class="exp-header">
+                        <div class="exp-logo">
+                            <img src="./assets/Expirences/Shopify.png" alt="Shopify Logo" class="company-logo">
+                        </div>
+                        <div class="exp-titles">
+                            <h3>Founder of Ottawa Chapter</h3>
+                            <p>Shopify Builder Sunday</p>
+                        </div>
                     </div>
 
-                    <div class="exp-content">
-                        <div class="exp-header">
-                            <div class="exp-logo">
-                                <!-- Dovercourt Logo -->
-                                <img src="./assets/Expirences/DCRlogo.png" alt="Dovercourt Logo" class="company-logo">
-                            </div>
-                            <div class="exp-titles">
-                                <h3>Founder & Lead Instructor</h3>
-                                <p>Dovercourt Recreation Center</p>
-                            </div>
-                        </div>
-
-                        <div class="exp-details">
-                            <div class="tech-stack">
-                                <span class="tech-tag">Python</span>
-                                <span class="tech-tag">PyTorch</span>
-                                <span class="tech-tag">AWS</span>
-                                <span class="tech-tag">Docker</span>
-                            </div>
+                    <div class="exp-details">
+                        <div class="tech-stack">
+                            <span class="tech-tag">Ruby on Rails</span>
+                            <span class="tech-tag">GraphQL</span>
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">MySQL</span>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <!-- Carleton Experience Card -->
+            <div class="exp-card">
+                <div class="exp-bg"
+                    style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
+                </div>
+
+                <div class="exp-content">
+                    <div class="exp-header">
+                        <div class="exp-logo">
+                            <img src="./assets/Expirences/CarletonLogo.png" alt="Carleton Logo"
+                                class="company-logo carleton-logo">
+                        </div>
+                        <div class="exp-titles">
+                            <h3>Peer Mentor</h3>
+                            <p>Carleton University</p>
+                        </div>
+                    </div>
+
+                    <div class="exp-details">
+                        <div class="tech-stack">
+                            <span class="tech-tag">Java</span>
+                            <span class="tech-tag">C++</span>
+                            <span class="tech-tag">Algorithms</span>
+                            <span class="tech-tag">Data Structures</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Example Card 2 -->
+            <div class="exp-card">
+                <div class="exp-bg"
+                    style="background-image: url('./assets/Expirences/DCRbanner.png'); background-position: right 40%; background-size: 60%;">
+                </div>
+
+                <div class="exp-content">
+                    <div class="exp-header">
+                        <div class="exp-logo">
+                            <!-- Dovercourt Logo -->
+                            <img src="./assets/Expirences/DCRlogo.png" alt="Dovercourt Logo" class="company-logo">
+                        </div>
+                        <div class="exp-titles">
+                            <h3>Founder & Lead Instructor</h3>
+                            <p>Dovercourt Recreation Center</p>
+                        </div>
+                    </div>
+
+                    <div class="exp-details">
+                        <div class="tech-stack">
+                            <span class="tech-tag">Python</span>
+                            <span class="tech-tag">PyTorch</span>
+                            <span class="tech-tag">AWS</span>
+                            <span class="tech-tag">Docker</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             </div>
         </section>
