--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                                 <img src="./assets/Expirences/ciena.png" alt="Ciena Logo" class="company-logo">
                             </div>
                             <div class="exp-titles">
-                                <h3>Software Engineer Intern</h3>
+                                <div class="exp-title-row">
+                                    <h3>Software Engineer Intern</h3>
+                                    <span class="exp-date">May 2025 – Present</span>
+                                </div>
                                 <p>Ciena</p>
                             </div>
                         </div>
@@ -97,7 +100,10 @@
                             <img src="./assets/Expirences/Shopify.png" alt="Shopify Logo" class="company-logo">
                         </div>
                         <div class="exp-titles">
-                            <h3>Founder of Ottawa Chapter</h3>
+                            <div class="exp-title-row">
+                                <h3>Founder of Ottawa Chapter</h3>
+                                <span class="exp-date">Jan 2026 - Present</span>
+                            </div>
                             <p>Shopify Builder Sunday</p>
                         </div>
                     </div>
@@ -126,7 +132,10 @@
                                 class="company-logo carleton-logo">
                         </div>
                         <div class="exp-titles">
-                            <h3>Peer Mentor</h3>
+                            <div class="exp-title-row">
+                                <h3>Peer Mentor</h3>
+                                <span class="exp-date">Sept 2025 - Dec 2025</span>
+                            </div>
                             <p>Carleton University</p>
                         </div>
                     </div>
@@ -155,7 +164,10 @@
                             <img src="./assets/Expirences/DCRlogo.png" alt="Dovercourt Logo" class="company-logo">
                         </div>
                         <div class="exp-titles">
-                            <h3>Founder & Lead Instructor</h3>
+                            <div class="exp-title-row">
+                                <h3>Founder & Lead Instructor</h3>
+                                <span class="exp-date">Jan 2024 – Jun 2024</span>
+                            </div>
                             <p>Dovercourt Recreation Center</p>
                         </div>
                     </div>
